// Copyright (C) 2016 Nippon Telegraph and Telephone Corporation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
// implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package link;

import "port.proto";

enum LinkScanMode {
    LINKSCAN_MODE_NONE = 0;
    LINKSCAN_MODE_SW = 1;
    LINKSCAN_MODE_HW = 2;
    LINKSCAN_MODE_COUNT = 3;
}

message DetachRequest {
    int64 unit = 1;
}

message DetachResponse {
}

message LinkscanEnableSetRequest {
    int64 unit = 1;
    int64 interval = 2; // link scan cycles in micro-seconds. 0 indicates linkscan is disabled.
}

message LinkscanEnableSetResponse {
}

message LinkscanEnableGetRequest {
    int64 unit = 1;
}

message LinkscanEnableGetResponse {
    int64 interval = 1;
}

message LinkscanModeSetRequest {
    int64 unit = 1;
    int64 port = 2;
    LinkScanMode mode = 3;
}

message LinkscanModeSetResponse {
}

message LinkscanModeGetRequest {
    int64 unit = 1;
    int64 port = 2;
}

message LinkscanModeGetResponse {
    LinkScanMode mode = 1;
}

message LinkscanModeSetPBMRequest {
    int64 unit = 1;
    bytes pbmp = 2;
    LinkScanMode mode = 3;
}

message LinkscanModeSetPBMResponse {
}

message MonitorRequest {
    int64 unit = 1;
}

message MonitorResponse {
    int64 unit = 1;
    int64 port = 2;
    port.PortInfo info = 3;
}
